--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <style>
 
 .node {
-  font: 300 11px "Helvetica Neue", Helvetica, Arial, sans-serif;
-  fill: #bbb;
+  font: 100 12px "Helvetica Neue", Helvetica, Arial, sans-serif;
+  fill: #58559c;
 }
 
 .node:hover {
@@ -12,7 +12,7 @@
 }
 
 .link {
-  stroke: steelblue;
+  stroke: #db4144;
   stroke-opacity: 0.4;
   fill: none;
   pointer-events: none;
@@ -51,7 +51,7 @@
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script>
 
-var diameter = 960,
+var diameter = 860,
     radius = diameter / 2,
     innerRadius = radius - 120;
 
