--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 }
 
 .node--source {
-  fill: #2ca02c;
+  fill: #008080;
 }
 
 .node--target {
-  fill: #d62728;
+  fill: #fdd9ba;
 }
 
 .link--source,
@@ -39,11 +39,11 @@
 }
 
 .link--source {
-  stroke: #d62728;
+  stroke: #64abff;
 }
 
 .link--target {
-  stroke: #2ca02c;
+  stroke: #20265c;
 }
 
 </style>
@@ -51,7 +51,7 @@
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script>
 
-var diameter = 860,
+var diameter = 800,
     radius = diameter / 2,
     innerRadius = radius - 120;
 
